# API

./: .gitignore  .pylintrc  Dockerfile  README.md  import.py  pyproject.toml  z_matrix.xlsx
.github/workflows/: python-app.yml
api/: crud.py  database.py  deps.py  ibge.py  main.py  models.py  schemas.py  security.py
api/routers/: model.py  role.py  sectors.py  user.py  users.py
sample/: .~lock.EIOLCA-Modelo-1-MC-855.xlsx#  EIOLCA-Modelo-1-MC-855.xlsx  EIOLCA-Modelo-67-Setores.xlsx  Matriz_de_Insumo_Produto_2015_Nivel_67.ods
sample/Nível68/: 68_tab1_2010.ods  68_tab1_2011.ods  68_tab1_2012.ods  68_tab1_2013.ods  68_tab1_2014.ods  68_tab1_2015.ods  68_tab1_2016.ods  68_tab1_2017.ods  68_tab1_2018.ods  68_tab2_2010.ods  68_tab2_2011.ods  68_tab2_2012.ods  68_tab2_2013.ods  68_tab2_2014.ods  68_tab2_2015.ods  68_tab2_2016.ods  68_tab2_2017.ods  68_tab2_2018.ods  68_tab3_2011.ods  68_tab3_2012.ods  68_tab3_2013.ods  68_tab3_2014.ods  68_tab3_2015.ods  68_tab3_2016.ods  68_tab3_2017.ods  68_tab3_2018.ods  68_tab4_2011.ods  68_tab4_2012.ods  68_tab4_2013.ods  68_tab4_2014.ods  68_tab4_2015.ods  68_tab4_2016.ods  68_tab4_2017.ods  68_tab4_2018.ods
tests/: .~lock.Matriz_de_Insumo_Produto_2015_Nivel_67.ods#  68_tab2_2015.ods  test_ibge.py
