[tool.poetry]
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
description = "API is awesome"
license = "MIT"
name = "855"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.61.0"
sqlalchemy = "^1.3.0"
uvicorn = "^0.12.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
python-multipart = "^0.0.5"
openpyxl = "^3.0.5"
requests = "^2.25.0"
pyexcel = "^0.6.6"
pyexcel-ods3 = "^0.6.0"
pytest-xdist = "^2.2.0"
numpy = "^1.19.4"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.0", allow-prereleases = true}
ipython = "^7.13"
pre-commit = {version = "^2.0"}
pylint = "^2.4"
pytest = {version = "^6.0"}
pytest-cov = "^2.10.0"

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov=api
    --cov-report term-missing:skip-covered
    --doctest-modules
"""

minversion = "6.0"
testpaths = [
  "tests",
]
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
